force-app/main/default/objects/Discount_List__c/Discount_List__c.object-meta.xml
<CustomObject>
    <label>Proposal Fare Discount</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>Proposal Discount Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Fare Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>