force-app/main/default/objects/Discount_List__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approval Required Team Lead for QBS</description>
    <label>Approval Required Team Lead</label>
    <type>Checkbox</type>
</CustomField>