force-app/main/default/objects/Discount_List__c/fields/Approval_Comment_NAM__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comment_NAM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Comment NAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>