force-app/main/default/objects/Discount_List__c/fields/Approval_Required_DO__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required_DO__c</fullName>
    <formula>AND(OR( 
AND( NOT(DO_Approved__c), Discount__c &gt; Discount_Threshold_NAM__c,Segment__c==&apos;Domestic&apos;, 
OR(Category__c==&apos;Mainline&apos;, Category__c==&apos;Intra-WA&apos;, Category__c==&apos;Regional&apos;, Category__c==&apos;Route&apos;),ISPICKVAL(Proposal_Type__c, &apos;Corporate Airfares&apos;)), 

AND( NOT(DO_Approved__c), Discount__c &gt; Discount_Threshold_NAM__c,Segment__c==&apos;International&apos;,ISPICKVAL(Proposal_Type__c, &apos;Corporate Airfares&apos;)), 

AND ( NOT(DO_Approved__c),ISPICKVAL(Proposal_Type__c, &apos;Qantas Business Savings&apos;),OR(ISPICKVAL(Fare_Combination__c, &apos;Mainline - Red e-Deal&apos;), ISPICKVAL(Fare_Combination__c, &apos;Mainline - Red e-Deal + Q&apos;), 
ISPICKVAL(Fare_Combination__c, &apos;Mainline - Flex Only Deal&apos;),ISPICKVAL(Fare_Combination__c, &apos;Regional&apos;), ISPICKVAL(Fare_Combination__c, &apos;DOM Route Deal&apos;), 
ISPICKVAL(Fare_Combination__c, &apos;International&apos;),ISPICKVAL(Fare_Combination__c, &apos;Propeller&apos;)),Discount__c &gt; Discount_Threshold_NAM__c)),NOT(DO_Rejected__c),OR(NOT(IsApproved__c),QL_IsReapproved__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Optimization Approval Required</label>
    <type>Checkbox</type>
</CustomField>