force-app/main/default/objects/Discount_List__c/fields/Approval_Required_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required_Pricing__c</fullName>
    <formula>AND(OR( 
AND( NOT(Approved_by_Pricing__c),
Discount__c &gt; Discount_Threshold_DO__c, Segment__c==&apos;Domestic&apos;, 
OR(Category__c==&apos;Mainline&apos;, Category__c==&apos;Intra-WA&apos;,Category__c==&apos;Regional&apos;, Category__c==&apos;Route&apos;),Qantas_Annual_Expenditures__c &gt;= 300000), 
AND( NOT(Approved_by_Pricing__c),NOT(IsApproved__c),Discount__c &gt; Discount_Threshold_DO__c,Segment__c==&apos;International&apos;,ISPICKVAL(Proposal_Type__c, &apos;Corporate Airfares&apos;), Network__c == &apos;Non-MCA&apos;,Qantas_Annual_Expenditures__c &gt;= 300000), 

AND( NOT(Approved_by_Pricing__c),Discount__c &gt; Discount_Threshold_DO__c,Segment__c==&apos;International&apos;,ISPICKVAL(Proposal_Type__c, &apos;Corporate Airfares&apos;), Network__c == &apos;MCA&apos;), 

AND(NOT(Approved_by_Pricing__c),ISPICKVAL(Proposal_Type__c, &apos;Qantas Business Savings&apos;), OR( ISPICKVAL(Fare_Combination__c, &apos;Mainline - Red e-Deal&apos;), ISPICKVAL(Fare_Combination__c, &apos;Mainline - Red e-Deal + Q&apos;), 
ISPICKVAL(Fare_Combination__c, &apos;Mainline - Flex Only Deal&apos;),ISPICKVAL(Fare_Combination__c, &apos;Regional&apos;), ISPICKVAL(Fare_Combination__c, &apos;DOM Route Deal&apos;), 
ISPICKVAL(Fare_Combination__c, &apos;International&apos;),ISPICKVAL(Fare_Combination__c, &apos;Propeller&apos;)), Discount__c &gt; Discount_Threshold_DO__c, Qantas_Annual_Expenditures__c &gt;= 300000)), NOT(Pricing_Rejected__c),OR(NOT(IsApproved__c),QL_IsReapproved__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Approval Required</label>
    <type>Checkbox</type>
</CustomField>