force-app/main/default/objects/Discount_List__c/fields/Approval_Required_SBD_QBS__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required_SBD_QBS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approval Required (SBD) for QBS</description>
    <label>Approval Required (SBD)</label>
    <type>Checkbox</type>
</CustomField>