force-app/main/default/objects/Discount_List__c/fields/Approval_Required_TeamLead_CA__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required_TeamLead_CA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approval Required TeamLead for CA</description>
    <label>Approval Required TeamLead</label>
    <type>Checkbox</type>
</CustomField>