force-app/main/default/objects/Discount_List__c/fields/ApprovalRequired_SBD_CA__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequired_SBD_CA__c</fullName>
    <formula>AND(OR( 
AND( NOT(Approved_by_SBD__c ),NOT(IsApproved__c),Discount__c &gt; Discount_Threshold_AM__c,Segment__c==&apos;Domestic&apos;, 
OR(Category__c==&apos;Mainline&apos;, Category__c==&apos;Intra-WA&apos;, Category__c==&apos;Regional&apos;, Category__c==&apos;Route&apos;), 
ISPICKVAL(Proposal_Type__c, &apos;Corporate Airfares&apos;)), 

AND(NOT(Approved_by_SBD__c ),NOT(IsApproved__c), Discount__c &gt; Discount_Threshold_AM__c, Segment__c==&apos;International&apos;, ISPICKVAL(Proposal_Type__c, &apos;Corporate Airfares&apos;))), 
NOT(Rejected_by_SBD__c), 
OR(CONTAINS(CreatedBy.Level__c,&apos;P5&apos;),CONTAINS(CreatedBy.Level__c,&apos;P4(QIS)&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovalRequired SBD CA</label>
    <type>Checkbox</type>
</CustomField>