force-app/main/default/objects/Discount_List__c/fields/Approved_by_NAM__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_NAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by NAM</label>
    <type>Checkbox</type>
</CustomField>