force-app/main/default/objects/Discount_List__c/fields/Approved_by_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Pricing</label>
    <type>Checkbox</type>
</CustomField>