force-app/main/default/objects/Discount_List__c/fields/Approved_by_SBD__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_SBD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approved by SBD for CA</description>
    <label>Approved by SBD</label>
    <type>Checkbox</type>
</CustomField>