force-app/main/default/objects/Discount_List__c/fields/Approved_by_TL__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_TL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approved by TL for CA</description>
    <label>Approved by TL</label>
    <type>Checkbox</type>
</CustomField>