force-app/main/default/objects/Discount_List__c/fields/Approved_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Discount__c</fullName>
    <label>Approved Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>