force-app/main/default/objects/Discount_List__c/fields/Booking_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class_Name__c</fullName>
    <formula>FareStructure__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Class</label>
    <type>Text</type>
</CustomField>