force-app/main/default/objects/Discount_List__c/fields/Cabin__c.field-meta.xml
<CustomField>
    <fullName>Cabin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cabin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>