force-app/main/default/objects/Discount_List__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field stores discount values. Proposal 2 Tier Changes - CRM 5209</description>
    <label>Tier 2 / Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>