force-app/main/default/objects/Discount_List__c/fields/Discount_Comparison_with_AM__c.field-meta.xml
<CustomField>
    <fullName>Discount_Comparison_with_AM__c</fullName>
    <formula>Discount__c &gt; Discount_Threshold_AM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Comparison with AM</label>
    <type>Checkbox</type>
</CustomField>