force-app/main/default/objects/Discount_List__c/fields/Discount_Threshold_AM__c.field-meta.xml
<CustomField>
    <fullName>Discount_Threshold_AM__c</fullName>
    <label>Discount Threshold (AM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>