force-app/main/default/objects/Discount_List__c/fields/Discount_Threshold_TL__c.field-meta.xml
<CustomField>
    <fullName>Discount_Threshold_TL__c</fullName>
    <label>Discount Threshold (TL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>