force-app/main/default/objects/Discount_List__c/fields/DO_Approved__c.field-meta.xml
<CustomField>
    <fullName>DO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO Approved</label>
    <type>Checkbox</type>
</CustomField>