force-app/main/default/objects/Discount_List__c/fields/DO_Rejected__c.field-meta.xml
<CustomField>
    <fullName>DO_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO_Rejected</label>
    <type>Checkbox</type>
</CustomField>