force-app/main/default/objects/Discount_List__c/fields/Fare_Combination__c.field-meta.xml
<CustomField>
    <fullName>Fare_Combination__c</fullName>
    <label>Fare Combination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mainline - H in B deal</fullName>
            </value>
            <value>
                <fullName>Mainline - Flex Only Deal</fullName>
            </value>
            <value>
                <fullName>Mainline - Red e-Deal</fullName>
            </value>
            <value>
                <fullName>Intra WA - H in B</fullName>
            </value>
            <value>
                <fullName>Intra-WA Flex</fullName>
            </value>
            <value>
                <fullName>Volume - Flex</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Token - H in B</fullName>
            </value>
            <value>
                <fullName>Token - Flex</fullName>
            </value>
            <value>
                <fullName>Mainline - JCYB Deal</fullName>
            </value>
            <value>
                <fullName>Mainline - Red e-Deal + Q</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>INT MCA Route Deal</fullName>
            </value>
            <value>
                <fullName>INT Non MCA Route Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>