force-app/main/default/objects/Discount_List__c/fields/Fare_Structure_Cabin__c.field-meta.xml
<CustomField>
    <fullName>Fare_Structure_Cabin__c</fullName>
    <formula>TEXT( FareStructure__r.Cabin__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabin</label>
    <type>Text</type>
</CustomField>