force-app/main/default/objects/Discount_List__c/fields/Fare_Structure_Market_Category__c.field-meta.xml
<CustomField>
    <fullName>Fare_Structure_Market_Category__c</fullName>
    <formula>TEXT( FareStructure__r.Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>