force-app/main/default/objects/Discount_List__c/fields/FareStructure__c.field-meta.xml
<CustomField>
    <fullName>FareStructure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Class</label>
    <referenceTo>Fare_Structure__c</referenceTo>
    <relationshipName>Fare_Structure_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>