force-app/main/default/objects/Discount_List__c/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is being used in Process builder to check if the Approval Status of Proposal is &apos;Approved&apos;</description>
    <label>IsApproved</label>
    <type>Checkbox</type>
</CustomField>