force-app/main/default/objects/Discount_List__c/fields/Issubmittedcheck__c.field-meta.xml
<CustomField>
    <fullName>Issubmittedcheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is being used in Process builder to make the checkbox true when the Approval Status of Proposal is Submitted</description>
    <label>Issubmittedcheck</label>
    <type>Checkbox</type>
</CustomField>