force-app/main/default/objects/Discount_List__c/fields/Issumbitted__c.field-meta.xml
<CustomField>
    <fullName>Issumbitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is being used in Process builder to check if the Approval Status of Proposal is &apos;Submitted&apos;</description>
    <label>Issubmitted</label>
    <type>Checkbox</type>
</CustomField>