force-app/main/default/objects/Discount_List__c/fields/NAM_Rejected__c.field-meta.xml
<CustomField>
    <fullName>NAM_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAM Rejected</label>
    <type>Checkbox</type>
</CustomField>