force-app/main/default/objects/Discount_List__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network</label>
    <length>100</length>
    <type>Text</type>
</CustomField>