force-app/main/default/objects/Discount_List__c/fields/Network_Route__c.field-meta.xml
<CustomField>
    <fullName>Network_Route__c</fullName>
    <description>Added QF/EK based on EK Changes CRM-5329</description>
    <formula>IF(ISBLANK( Network__c),&quot; &quot;,Network__c) &amp; &quot; ; &quot; &amp; IF(ISBLANK(Route_O_D__c),&quot; &quot;,Route_O_D__c) &amp; &quot; ; &quot; &amp; IF(ISBLANK(QL_QF_EK_Fare_Structure__c),&quot; &quot;,QL_QF_EK_Fare_Structure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Network;Route;QF/EK</label>
    <type>Text</type>
</CustomField>