force-app/main/default/objects/Discount_List__c/fields/Pricing_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Rejected</label>
    <type>Checkbox</type>
</CustomField>