force-app/main/default/objects/Discount_List__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal Name</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Proposal Fare Discounts</relationshipLabel>
    <relationshipName>Fare_Structure_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>