force-app/main/default/objects/Discount_List__c/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qantas Business Savings</fullName>
            </value>
            <value>
                <fullName>Corporate Airfares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>