force-app/main/default/objects/Discount_List__c/fields/Qantas_Annual_Expenditures__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Annual_Expenditures__c</fullName>
    <label>Forecast QF Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>