force-app/main/default/objects/Discount_List__c/fields/Qantas_Published_Airfare__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Published_Airfare__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qantas Published Airfare</label>
    <length>100</length>
    <type>Text</type>
</CustomField>