force-app/main/default/objects/Discount_List__c/fields/QBS_Deafualt_Discount__c.field-meta.xml
<CustomField>
    <fullName>QBS_Deafualt_Discount__c</fullName>
    <label>QBS Deafualt Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>