force-app/main/default/objects/Discount_List__c/fields/QL_Booking_Details__c.field-meta.xml
<CustomField>
    <fullName>QL_Booking_Details__c</fullName>
    <description>This field stores coimbination of Booking Class, Category, Market Details</description>
    <formula>IF(ISBLANK( Booking_Class_Name__c),&quot; - &quot;,Booking_Class_Name__c)  &amp; &quot; ; &quot; &amp; IF(ISBLANK(  Fare_Structure_Market_Category__c ),
&quot; - &quot;,Fare_Structure_Market_Category__c) &amp; &quot; ; &quot; &amp; IF(ISBLANK( Fare_Structure_Market__c ),&quot; - &quot;,Fare_Structure_Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Class;Category;Market</label>
    <type>Text</type>
</CustomField>