force-app/main/default/objects/Discount_List__c/fields/QL_IsReapproved__c.field-meta.xml
<CustomField>
    <fullName>QL_IsReapproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updates the field when the Reapproval is sent</description>
    <label>IsReapproved</label>
    <type>Checkbox</type>
</CustomField>