force-app/main/default/objects/Discount_List__c/fields/QL_QF_EK__c.field-meta.xml
<CustomField>
    <fullName>QL_QF_EK__c</fullName>
    <description>Indicates whether the fare belongs to QF or EK (CRM-5329)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QF/EK</label>
    <length>100</length>
    <type>Text</type>
</CustomField>