force-app/main/default/objects/Discount_List__c/fields/QL_Tier_1_Offering__c.field-meta.xml
<CustomField>
    <fullName>QL_Tier_1_Offering__c</fullName>
    <description>Created to store Tier 1/Offering values - Proposal 2 Tier Changes - CRM 5209</description>
    <label>Tier 1 / Offering</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>