force-app/main/default/objects/Discount_List__c/fields/Rejected_by_SBD__c.field-meta.xml
<CustomField>
    <fullName>Rejected_by_SBD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rejected by SBD for CA</description>
    <label>Rejected by SBD</label>
    <type>Checkbox</type>
</CustomField>