force-app/main/default/objects/Discount_List__c/fields/Route_O_D__c.field-meta.xml
<CustomField>
    <fullName>Route_O_D__c</fullName>
    <formula>Route_Origin__c &amp;&quot;-&quot;&amp; Route_Destination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route O-D</label>
    <type>Text</type>
</CustomField>