force-app/main/default/objects/Discount_List__c/fields/SBD_Approved__c.field-meta.xml
<CustomField>
    <fullName>SBD_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBD Approved for QBS</description>
    <label>SBD Approved</label>
    <type>Checkbox</type>
</CustomField>