force-app/main/default/objects/Discount_List__c/fields/SBD_Rejected__c.field-meta.xml
<CustomField>
    <fullName>SBD_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBD Rejected for QBS</description>
    <label>SBD Rejected</label>
    <type>Checkbox</type>
</CustomField>