force-app/main/default/objects/Discount_List__c/fields/TeamLead_Approved__c.field-meta.xml
<CustomField>
    <fullName>TeamLead_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TeamLead Approved</label>
    <type>Checkbox</type>
</CustomField>