force-app/main/default/objects/Discount_List__c/fields/TeamLead_Rejected__c.field-meta.xml
<CustomField>
    <fullName>TeamLead_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TeamLead Rejected</label>
    <type>Checkbox</type>
</CustomField>