force-app/main/default/objects/Discount_List__c/fields/TL_Rejected__c.field-meta.xml
<CustomField>
    <fullName>TL_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TL Rejected</label>
    <type>Checkbox</type>
</CustomField>