force-app/main/default/objects/Discount_List__c/recordTypes/Approved_Customer.recordType-meta.xml
<RecordType>
    <fullName>Approved_Customer</fullName>
    <active>true</active>
    <label>Approved - Customer</label>
</RecordType>