force-app/main/default/objects/Discount_List__c/validationRules/Lock_Proposalfarediscount_Higher_Disc.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Proposalfarediscount_Higher_Disc</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.EnableValidationRule__c.EnableVR_to_prevent_DO_Users_from_Editin__c,
NOT(ISPICKVAL( Proposal__r.Status__c , &apos;Draft&apos;)),
NOT(ISPICKVAL( Proposal__r.Approval_Status__c , &apos;Not Required&apos;)),
ISCHANGED(Discount__c),
NOT(Discount__c &lt;= Approved_Discount__c),
PRIORVALUE(Discount__c ) != 0,
OR(
TEXT(Proposal__r.Approval_Status__c) =&apos;Submitted&apos;,

ISCHANGED( FareStructure__c ),
ISCHANGED(Route_Destination__c),
ISCHANGED( Route_Origin__c ),
ISCHANGED( Discount_Threshold_AM__c ),
ISCHANGED( Discount_Threshold_TL__c ),
ISCHANGED( Discount_Threshold_NAM__c ),
ISCHANGED( Discount_Threshold_DO__c )
)
)</errorConditionFormula>
    <errorMessage>Proposal Fare Discount cannot be edited for the above proposal</errorMessage>
</ValidationRule>