force-app/main/default/objects/Discount_List__c/validationRules/Restrict_Modifying_BookingClass.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Modifying_BookingClass</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Approved_Customer&apos;, ISCHANGED(  FareStructure__c ), $Setup.EnableValidationRule__c.EnableVR_to_prevent_DO_Users_from_Editin__c)</errorConditionFormula>
    <errorDisplayField>FareStructure__c</errorDisplayField>
    <errorMessage>Value change is not allowed</errorMessage>
</ValidationRule>