force-app/main/default/objects/Discount_List__c/validationRules/Restrict_Modifying_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Modifying_Discount</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Approved_Customer&apos;, ISCHANGED( Discount__c ), $Setup.EnableValidationRule__c.EnableVR_to_prevent_DO_Users_from_Editin__c)</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Value change is not allowed</errorMessage>
</ValidationRule>