force-app/main/default/objects/Discount_List__c/validationRules/Tier_1_should_be_less_than_Tier_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_1_should_be_less_than_Tier_2</fullName>
    <active>true</active>
    <description>Proposal 2 Tier changes</description>
    <errorConditionFormula>QL_Tier_1_Offering__c &gt; Discount__c</errorConditionFormula>
    <errorDisplayField>QL_Tier_1_Offering__c</errorDisplayField>
    <errorMessage>Tier 1 should be less than Tier 2</errorMessage>
</ValidationRule>